[package]
name = "rustbook"
version = "0.1.0"
edition = "2021"
authors = ["Abdullah Shams"]
description = "A robust Rust backend API with Docker containerization"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/RUSTBOOK"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-rt = "2.8.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "chrono", "uuid", "json", "offline"] }

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.14"
dotenv = "0.15"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# Async utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Miscellaneous
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
config = "0.13"

[dev-dependencies]
mockall = "0.11"
actix-rt = "2.8"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1