[package]
name = "rustbook"
version = "0.1.0"
edition = "2021"
authors = ["Abdullah Shams"]
description = "A robust Rust backend API with Docker containerization"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/RUSTBOOK"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
actix-rt = "2.5"
serde_json = "1.0"
